[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Master.G"]
edition = "2021"
license = "MIT"
repository = "https://github.com/master-g/kctoolbox"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
image = "0.24.7"

[profile.release]
debug = false
strip = "debuginfo"
lto = true
opt-level = "s"

[profile.bench]
debug = true
