[package]
name = "cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprite_unpacker = { path = "../sprite_unpacker" }

anyhow = { workspace = true }
clap = { workspace = true }
